--- a/experimental.tex
+++ b/experimental.tex
@@ -17,12 +17,12 @@ sección \ref{sec:experimentalBeapi} se evalúa la generación exhaustiva acotad
 
 En esta sección, evaluamos experimentalmente los enfoques presentados en el
 Capítulo~\ref{cap:builders}. Analizaremos la eficiencia y precision de cada
-algoritmo utilizando las funciones de valoración introducidas en la
+algoritmo utilizando las funciones objetivo introducidas en la
 Sección~\ref{sec:fitness}. Además, mostraremos cómo los métodos identificados
 por nuestras técnicas pueden ser aprovechados en el contexto de herramientas
 de verificación de software.
 
-Con respecto a esta técnica, las siguientes preguntas de investigación guían esta experimentación:
+Con respecto a estas técnicas, las siguientes preguntas de investigación guían esta experimentación:
 
 \begin{itemize}
 \item \emph{RQ1}: ¿Qué tan eficientes son los algoritmos propuestos para
@@ -33,8 +33,12 @@ Con respecto a esta técnica, las siguientes preguntas de investigación guían 
 \end{itemize}
 
 \subsection{Configuraci\'on experimental}
-La evaluación se llevó a cabo sobre un conjunto de implementaciones de
-estructuras de datos que sirven como casos de estudio de referencia,
+
+\subsubsection{Casos de estudio.}
+
+
+La evaluación se llevó a cabo sobre un conjunto de clases Java 
+ que manipulan estructuras dinámicas complejas,
 incluyendo: \verb"NCL" de Apache Commons Collections~\cite{apache};
 \verb"BinaryTree", \verb"BinomialHeap" y \verb"FibonacciHeap", extraídos
 de~\cite{Visser:2006}; y \verb"UnionFind", una implementación de conjuntos
@@ -44,7 +48,7 @@ También se incluyeron componentes de proyectos reales de software, tales como
 \verb"Lits" de la implementación de Sat4j~\cite{sat4j}, utilizada previamente
 en~\cite{Loncaric:2018}. Esta clase representa un conjunto de variables
 booleanas, encargado de registrar cuándo se realizó la última asignación y si
-existen observadores monitoreando su estado.
+existen observadores monitoreando su estado.\pp{No se entiende qué hace Lits}
 
 Por otro lado, se consideraron estructuras adicionales como \verb"Scheduler",
 un planificador de procesos tomado del conjunto de benchmarks SIR~\cite{sir},
@@ -52,7 +56,9 @@ y varias colecciones del paquete estándar \verb"java.util" de Java%
 \footnote{\url{https://docs.oracle.com/javase/8/docs/api/java/util/
 package-summary.html}}, incluyendo \verb"TreeMap", \verb"TreeSet",
 \verb"HashMap",\\
- \verb"HashSet" y \verb"LinkedList".
+ \verb"HashSet" y \verb"LinkedList". 
+
+\input{tables/groundTruth}
 
 Para evaluar la precisión de nuestros algoritmos, se construyó manualmente un
 conjunto de referencia o \emph{ground truth} que contiene los métodos
@@ -63,13 +69,16 @@ Tabla~\ref{tab:groundTruth} resume este conjunto de referencia, indicando para
 cada clase el número total de métodos en su API pública (\#API) y los métodos
 identificados manualmente como generadores de objetos. Cabe destacar que en algunos
 casos ciertos métodos pueden ser intercambiables (por ejemplo,
-\texttt{addFirst} y \texttt{addLast} en \texttt{NCL}).
+\texttt{addFirst} y \texttt{addLast} en \texttt{NCL}). \pp{el encabezado de la
+tabla está en inglés. No usamos la palabra builders acá. Y el caption? No se
+entiende que dice.}
 
-Todos los experimentos fueron ejecutados en una máquina con procesador Intel
-Core i7-6700 a 3.4\,GHz y 8\,GB de RAM, corriendo el sistema operativo
-GNU/Linux.
 
-\input{tables/groundTruth}
+\subsubsection{Algoritmos evaluados.}
+
+\pp{Falta describir brevemente los algoritmos evaluados, citando las secciones
+correspondientes, y las funciones de fitness. Y darles los nombres abreviados
+que después aparecen en las tablas.}
 
 % Como se discutió en el Capítulo~\ref{cap:beapi}, nuestros algoritmos requieren
 % la configuración de diversos parámetros que influyen en su eficiencia y
@@ -80,7 +89,9 @@ GNU/Linux.
 Nuestros algoritmos requieren la configuración de diversos parámetros que influyen en su eficiencia y
 efectividad. En particular, los parámetros más relevantes para el algoritmo
 genético ((Sección~\ref{alg:approachGA})) incluyen la tasa de mutación, la tasa de cruce, el tamaño de la
-población y la estrategia de selección utilizada.
+población y la estrategia de selección utilizada. \pp{Este párrafo está repetido
+abajo agregando solo los valores para los parámetros. Por qué no ponerlos
+acá directamente?}
 
 Para las evaluaciones que utilizan la función de valoración basada en Randoop
 (Sección~\ref{sec:fitnessRandoop}), es importante considerar el tiempo
@@ -89,7 +100,9 @@ Randoop utiliza esta semilla para controlar la generación de pruebas y
 permitir la reproducción de resultados. Dado que Randoop introduce un grado
 considerable de aleatoriedad, optamos por utilizar una semilla aleatoria
 diferente en cada ejecución para evaluar la robustez de nuestro enfoque bajo
-distintos escenarios.
+distintos escenarios. \pp{Este párrafo está repetido
+abajo agregando solo los valores para los parámetros. Por qué no ponerlos
+acá directamente?}
 
 En el caso de la función de valoración basada en generación exhaustiva
 (Sección~\ref{sec:fitnessGE}), es crucial definir el \emph{scope}, es decir, la
@@ -98,7 +111,9 @@ ciertos campos internos de las clases bajo análisis que no afectan la
 estructura lógica de los objetos generados, tales como el campo
 \texttt{modCount}, común en muchas colecciones de Java, que simplemente cuenta
 el número de modificaciones internas pero no altera la estructura observada
-del objeto.
+del objeto. \pp{Este párrafo está repetido
+abajo agregando solo los valores para los parámetros. Por qué no ponerlos
+acá directamente?}
 
 Los valores de configuración utilizados en los experimentos fueron determinados empíricamente mediante un proceso de prueba y error,
 como es habitual en el diseño y ajuste de algoritmos genéticos. 
@@ -115,71 +130,127 @@ de los algoritmos en contextos con elementos no determin\'isticos.
 
 Por otro lado, en la función de valoración basada en generación exhaustiva (también discutida en la Sección~\ref{sec:fitnessGE}), 
 se estableció un scope de 5, es decir, el número máximo de objetos de cada tipo que se generan para evaluar cada conjunto candidato de métodos
-constructores. Además, se ignoraron campos de las clases evaluadas que no alteran la estructura lógica de los objetos generados, tales como el campo \texttt{modCount}.
+constructores. Además, se ignoraron campos de las clases evaluadas que no
+alteran la estructura lógica de los objetos generados, tales como el campo
+\texttt{modCount}. \pp{Yo no pondría esto último porque no recuerdo que lo
+hayamos explicado en ningún lado.}
 
 Para cada combinación de caso de estudio y función de valoración, el algoritmo
-genético fue ejecutado cinco veces con los parámetros mencionados. Los
+genético fue ejecutado cinco veces con los parámetros mencionados \pp{Y HC}. Los
 resultados reportados en las siguientes secciones corresponden al promedio de
-estas ejecuciones. En el caso particular de la función de valoración basada en
+estas ejecuciones. En el caso particular de la función de valoración \pp{no
+usamos el término función de valoración. Siempre pusimos función objetivo.
+Chequeuar en todos lados.} basada en
 generación exhaustiva, no fue necesario realizar múltiples repeticiones, dado
 que dicha evaluación es determinística bajo una misma configuración.
 
+Todos los experimentos fueron ejecutados en una máquina con procesador Intel
+Core i7-6700 a 3.4\,GHz y 8\,GB de RAM, corriendo el sistema operativo
+GNU/Linux.
 
 \subsection{RQ1: Eficiencia del cómputo de generadores de objetos}
 
-La eficiencia de nuestros algoritmos es la cantidad de segundos que le lleva a cada uno de nuestros algoritmos con cada función de 
-valoración para encontrar el subconjunto de métodos generadores de objetos que sean suficientes. Para evaluar la eficiencia de nuestro algoritmo, 
-llevamos a cabo experimentos utilizando conjuntos de datos de muestra y medimos el tiempo de promedio de las 5 ejecuciones necesarias 
-para obtener las soluciones. Comparamos los resultados obtenidos con la técnica evolutiva (\emph{GA}) y con la técnica greedy (\emph{HC}) 
-para evaluar la eficiencia de ambos enfoques en función de la función de valoración utilizada. Los resultados se presentan en la Tabla \ref{tab:eficiencia}.
+Medimos la eficiencia de nuestros algoritmos en la cantidad de segundos que
+requiere la ejecución de los mismos para finalizar la búsqueda de métodos
+generadores de objetos a partir de la API. 
+%Para evaluar la eficiencia de nuestro algoritmo, 
+%llevamos a cabo experimentos utilizando conjuntos de datos de muestra y medimos el tiempo de promedio de las 5 ejecuciones necesarias 
+%para obtener las soluciones. 
+Comparamos los resultados obtenidos con la técnica evolutiva (\emph{GA}) y con
+la técnica greedy (\emph{HC}), y combinamos ambos enfoques en las distintas
+funciones objetivo propuestas \pp{Nombres}. Los resultados se presentan en la Tabla \ref{tab:eficiencia}.
+\pp{Corregir el caption de la tabla.}
 
-Como se observa en la tabla, el algoritmo Hill Climbing (\emph{HC}) es más efectivo que el algoritmo genético (\emph{GA}) para calcular los constructores de m\'etodos en todos los casos de estudio considerados.
+Como se observa en la tabla, el algoritmo Hill Climbing (\emph{HC}) es más
+efectivo \pp{eficiente?} que el algoritmo genético (\emph{GA}) en todos los casos de estudio considerados.
 El enfoque de Hill Climbing es razonablemente eficiente, tardando solo 20 minutos en el peor de los casos (NCL, debido a la cantidad y complejidad
-de su API), mientras que el algoritmo genético puede tardar mas de una hora en el peor de los casos. Esto se debe a que los algoritmos
-de Hill Climbing comienzan desde abajo hacia arriba, considerando menos métodos antes de considerar más métodos, a diferencia de los 
-algoritmos genéticos, que generan sucesores mediante operadores de cruce y mutación. Esta estrategia favorece al algoritmo Hill Climbing 
-para encontrar los métodos mínimos en tiempos más cortos. Cabe mencionar que en casos de estudio donde el algoritmo genético supera al 
-Hill Climbing, se debe a que la clase bajo prueba tiene pocos métodos, lo que permite que los algoritmos evolutivos converjan más rápidamente que el algoritmo Hill Climbing.
+de su API), mientras que el algoritmo genético puede tardar mas de una hora en
+el peor de los casos \pp{Cuál?}. \pp{Hay que poner tiempos promedios además del
+peor caso. Y agregarlos a las tablas.}.
 
+\pp{Faltan los tiempos promedios}. 
+%Esto se debe a que los algoritmos
+%de Hill Climbing comienzan desde abajo hacia arriba, considerando menos métodos antes de considerar más métodos, a diferencia de los 
+%algoritmos genéticos, que generan sucesores mediante operadores de cruce y mutación. Esta estrategia favorece al algoritmo Hill Climbing 
+%para encontrar los métodos mínimos en tiempos más cortos. Cabe mencionar que en casos de estudio donde el algoritmo genético supera al 
+%Hill Climbing, se debe a que la clase bajo prueba tiene pocos métodos, lo que permite que los algoritmos evolutivos converjan más rápidamente que el algoritmo Hill Climbing.
+%
 
-En relaci\'on con las funciones de valoraci\'on, observamos que la función de valoración basada en el generador exhaustivo (GE) logra 
-finalizar la búsqueda de métodos generadores en mucho menos tiempo en comparación con la función de valoración basada en la 
-cobertura generada por la suite de pruebas modificada del Randoop (RC). Esto se aplica a todos los algoritmos implementados. La función 
-de valoración GE converge antes en los algoritmos debido a que genera objetos hasta el alcance especificado (en este caso, 5 para todos 
-los casos) y luego finaliza la ejecución del candidato actual para continuar con los siguientes. Todas tienen un \emph{timeout} de 
-30 segundos para el caso de pueda generar muchas estrucutras con el scope dado. Esto permite una convergencia más rápida en comparación 
-con la función de valoración basada en Randoop, que agota su presupuesto de tiempo para cada candidato ejecutado en el algoritmo. Es 
-importante destacar que todos los algoritmos se ejecutan con 10 hilos simultáneamente, evaluando así 10 candidatos a la vez para cada 
-algoritmo.
+En relaci\'on con las funciones de valoraci\'on \pp{funciones objetivo las
+llamamos en toda la tesis. Si la vas a llamar función de valoración hay que
+cambiarlo en todos lados}, observamos que la basada en el generador exhaustivo (GE) logra 
+finalizar la búsqueda de métodos generadores de objetos en menos tiempo en comparación con la función basada en la 
+cobertura generada por la suite de pruebas \pp{No usar más la palabra pruebas.
+Es tests. O cambiarla en toda la tesis.} el algoritmo \pp{Poner el nombre del
+algoritmo, y la sección donde está} (RC). \pp{Hay que poner tiempos promedios
+para explicar esto. Y agregarlos a las tablas.}.
+
+Esto se aplica a todos los algoritmos implementados. La función 
+de valoración GE termina antes en los algoritmos debido a que genera objetos
+\pp{para un scope que debe ser especificado manualmente por el usuario. } (en este caso, 5 para todos 
+los casos \pp{esto va antes, cuando se presentan los algoritmos}). Todas tienen un \emph{timeout} de 
+30 segundos \pp{esto va antes, cuando se presentan los algoritmos}, pero muchas veces
+la generación exhaustiva acotada termina la generación de objetos antes del llegar al timeout. Esto permite
+que \pp{Nombre del algoritmo} más rápida \pp{cuánto?} en comparación 
+con la función de valoración \pp{objetivo} basada en Randoop \pp{No es basada en Randoop, es
+el algoritmo presentado en la sección correspondiente. Sino le bajás el
+precio.}. En cambio, el algoritmo \pp{XX} debe agotar su presupuesto de tiempo
+para cada candidato considerado. \pp{Sin embargo, la función objetivo basada en 
+    algoritmo XX no requiere que el usuario provea la definición del scope, y
+    podría ser más escalable que la generación exhaustiva acotada en casos donde
+la cantidad de objetos a generar crezca exponencialmente respecto de los scopes 
+(ver si hay alguno). Como trabajos futuros se planean realizar más experimentos 
+para evaluar esta hipótesis.}
+
+Es importante destacar que todos los algoritmos se ejecutan con 10 hilos
+simultáneamente, evaluando así 10 candidatos a la vez para cada algoritmo
+\pp{Esto se contradice con lo que dice la sección de genéticos}.
 
 En conclusión, en términos de eficiencia de nuestro algoritmo, para los casos estudiados en esta tesis, es conveniente utilizar el 
-algoritmo Hill Climbing con una función de valoración que cuente los objetos generados por el generador exhaustivo (\emph{GE}).
+algoritmo Hill Climbing con una función de valoración que cuente los objetos
+generados por el generador exhaustivo (\emph{GE}). \pp{La conclusión (respuesta
+    a la RQ) tiene que ser con números promedio para cada algoritmo, y debe contrastar los
+algoritmos y las funciones de valuación.}
 \input{tables/eficienciaBuilders}
+\pp{Falta un número para la última fila}
 
 \subsection{RQ2: Precisión de los algoritmos de cómputo de generadores de objetos}
 \label{sec:experimentalIdentificacionPrecision}
-La efectividad de nuestros algoritmos se mide en función de cuán cercanos están a identificar el conjunto mínimo de métodos 
-generadores de objectos de una API necesario para generar estructuras de datos válidas. 
+La efectividad de nuestros algoritmos se mide en función de cuán cercanos están
+a identificar el conjunto mínimo \pp{Minimal. Tener en cuenta los términos
+precisos que usamos durante toda la tesis.} de métodos 
+generadores de objetos a partir de una API. 
 Cabe destacar que en todos los casos, nuestros algoritmos 
-logran identificar al menos un subconjunto suficiente de métodos generadores de objetos. No obstante, cuanto más reducido sea este 
-subconjunto, mejor será la calidad del resultado en términos de cobertura de generación y simplicidad de las entradas de prueba.
+logran identificar al menos un subconjunto suficiente de métodos generadores de objetos. No obstante, cuanto más reducido sea este subconjunto, el resultado se condsidera mejor desde el punto de vista de la
+usabilidad de los generadores de objetos para el análisis de programas.
 
 Los experimentos se realizaron utilizando las estructuras de datos ya detalladas en la primera sección de este capítulo. Se evaluaron 
 los dos algoritmos: Hill Climbing (\emph{HC}), un algoritmo genético (\emph{GA}). Para cada uno de ellos, 
 se aplicaron dos funciones de valoración: una basada en el generador exhaustivo 
-(\emph{GE}) y otra basada en la cobertura de ramas obtenida a partir de una suite de pruebas generada con Randoop (\emph{RC}).
+(\emph{GE}) y otra basada en la cobertura de ramas obtenida a partir de una
+suite de pruebas generada con Randoop (\emph{RC}) \pp{Todo esto ya está dicho
+arriba}.
 Es importante señalar que la función de valoración basada en Randoop depende de una semilla aleatoria, lo que introduce cierta 
 variabilidad en los resultados. Esta función mide la cobertura alcanzada durante la ejecución de la suite generada, y puede arrojar 
-diferentes valores dependiendo de la semilla inicial.
+diferentes valores dependiendo de la semilla inicial \pp{Esto va en la
+definición de los algoritmos arriba. Y hay que explicar como mitigamos este
+problema, o sino directamente capaz que no lo mencionamos.}.
 
-En el caso de la estructura \emph{NCL}, el algoritmo \emph{HC} utilizando la función de valoración \emph{GE} logra encontrar el 
+En el caso de la estructura \emph{NCL}, el algoritmo \emph{HC} utilizando la
+función de valoración \emph{GE} \pp{Creo que le pondría HC+GE, porque sino es
+muy repetitivo y largo todo el texto.} logra encontrar el 
 conjunto mínimo exacto de métodos generadores en todas las ejecuciones. Sin embargo, cuando se utiliza la función \emph{RC}, 
-el mismo algoritmo encuentra en promedio un conjunto con 3.80 métodos, lo que indica que en tres de las cinco ejecuciones se incluyó 
-un método adicional no necesario. Por su parte, el algoritmo evolutivo (\emph{GA}) encuentra en todas las ejecuciones los metodos correctos
-con ambas funciones de valoracion.
+el mismo algoritmo encuentra en promedio un conjunto con 3.80 métodos \pp{acá el
+promedio no es lo mejor, habría que explicar los casos por separado. Pero ya lo
+hiciste así que fue. si lo cambiamos va a ser mucho laburo.}, lo que indica que en tres de las cinco ejecuciones se incluyó 
+un método adicional no necesario. Por su parte, el algoritmo evolutivo
+(\emph{GA}) encuentra en todas las ejecuciones los metodos correctos con ambas
+funciones de valoracion \pp{No es lo que dice la tabla}. \pp{El caption de la
+tabla hay que mejorarlo.} \pp{La tabla no está referenciada en el texto?}
 
 En estructuras como \emph{UnionFind}, \emph{FibonacciHeap}, \emph{BTree}, \emph{BinomialHeap} y \emph{Scheduler}, todos los 
-algoritmos evaluados lograron encontrar el conjunto mínimo exacto de métodos \emph{builders}. Esto puede atribuirse a que estas 
+algoritmos evaluados lograron encontrar el conjunto mínimo exacto de métodos
+\emph{builders} \pp{No usar builders.}. Esto puede atribuirse a que estas 
 estructuras presentan un menor número de métodos en su API, y sus invariantes son relativamente simples en comparación con otras 
 clases evaluadas.
 
@@ -191,7 +262,8 @@ pero el generador exhaustivo, sujeto al \emph{scope} limitado y a los valores in
 utilizar métodos adicionales. Es importante aclarar que esto no implica que dichos métodos adicionales sean verdaderos generadores, 
 sino que bajo las restricciones actuales (como el \emph{scope} configurado), no existe otra vía para construir determinadas 
 estructuras sin agregarlos. Si se incrementa el \emph{scope} o se modifica la clase para exponer mejor sus constructores, entonces 
-se logra encontrar el conjunto mínimo real. En contraste, la función \emph{RC} encuentra siempre el conjunto mínimo, dado que su 
+se logra encontrar el conjunto mínimo real \pp{Y por qué no hicimos esto en
+lugar de que calcule mal? No entiendo bien el problema, hay que charlarlo.} En contraste, la función \emph{RC} encuentra siempre el conjunto mínimo, dado que su 
 evaluación no depende del \emph{scope}, sino de la cobertura lograda en ejecución.
 
 En las estructuras pertenecientes al paquete \emph{java.util}, como \emph{TreeMap}, \emph{TreeSet}, \emph{HashMap}, \emph{HashSet} y \emph{LinkedList}, 
@@ -204,20 +276,24 @@ Por ejemplo, en \emph{TreeMap} y \emph{TreeSet}, el promedio de métodos identif
 frente al mínimo esperado de 3. Este comportamiento puede atribuirse a la naturaleza estocástica del algoritmo genético,
 que depende de la exploración guiada por operadores evolutivos (selección, cruce y mutación) y de la presión de la función de aptitud. 
 En escenarios donde múltiples combinaciones conducen a configuraciones aceptables, pero no óptimas, el algoritmo puede converger 
-hacia soluciones suficientes pero redundantes, incluyendo métodos no esenciales.
+hacia soluciones suficientes pero no minimales, incluyendo métodos no esenciales
+\pp{No debería pasar esto en teoría, salvo que
+no le alcance el tiempo. Hay que charlarlo.}.
 
 Además, la propia función \emph{RC}, basada en cobertura alcanzada mediante herramientas como \emph{Randoop}, 
 puede inducir una saturación temprana al favorecer métodos que rápidamente maximizan cobertura parcial, 
 aunque no necesariamente contribuyan a una construcción mínima. Esto puede explicar, por ejemplo, los resultados observados en \emph{HashSet} y \emph{HashMap}, 
-donde se identifican más métodos de los requeridos para generar la estructura objetivo. 
+donde se identifican más métodos de los requeridos para generar la estructura
+objetivo. \pp{No debería pasar esto en teoría. Hay que charlarlo.}.
 En el caso específico de \emph{HashMap}, incluso la función \emph{GE} tiende a incluir el método \texttt{keySet()}, 
-necesario para construir configuraciones específicas que de otro modo no serían alcanzables bajo el \emph{scope} definido.
+necesario para construir configuraciones específicas que de otro modo no serían alcanzables bajo el \emph{scope} definido. \pp{No debería pasar esto en teoría. Hay que charlarlo.}.
 
 En contraste, el algoritmo \emph{HC} muestra mayor estabilidad en la precisión, 
 logrando identificar el conjunto mínimo en la mayoría de los casos, 
 independientemente de la función de valoración empleada. Su comportamiento determinista y 
 su foco en mejoras incrementales lo hacen menos propenso a incluir métodos redundantes, 
-aunque esto también puede limitar su capacidad de escape ante óptimos locales.
+aunque esto también puede limitar su capacidad de escape ante óptimos locales \pp{No debería pasar esto en teoría, salvo que
+no le alcance el tiempo al genético. Hay que charlarlo.}.
 
 En resumen, la precisión alcanzada por los algoritmos depende fuertemente tanto de la estrategia de búsqueda como de la función de valoración. 
 La exploración estocástica de \emph{GA} le permite descubrir soluciones diversas, 
@@ -228,7 +304,7 @@ Estos resultados destacan la necesidad de calibrar adecuadamente los parámetros
 \subsection{RQ3: Impacto de los generadores de objetos en el análisis de
 software}
 
-En esta sección evaluamos la utilidad práctica de los métodos generadores de objetos (\emph{builders}) 
+En esta sección evaluamos la utilidad práctica de los métodos generadores de objetos 
 identificados previamente, en el contexto de la generación automatizada de casos de prueba. 
 Estos métodos permiten crear instancias válidas de estructuras de datos, que pueden ser utilizadas como 
 entradas en pruebas unitarias o pruebas basadas en propiedades.
