fixed comments in builders

--- a/beapi.tex
+++ b/beapi.tex
@@ -1,4 +1,4 @@
-\chapter{Generaci'on Exhaustiva acotada desde API de los programas}
+\chapter{Generación Exhaustiva acotada desde API de los programas}
 \label{cap:beapi}
 
 En adelante, se presenta la técnica desarrollada llamada BEAPI, que tiene como
